old/manifests/rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stephen
---

# See https://jeremievallee.com/2018/05/28/kubernetes-rbac-namespace-user.html
# kubectl -n <username> describe sa <username>
# kubectl -n <username> get secret <username>-token-xxxxx -o "jsonpath={.data.token}" | base64 -d > token
# kubectl -n <username> get secret <username>-token-xxxxx -o "jsonpath={.data['ca\.crt']}" > ca.pem
# kubectl config set-cluster rpi --server=https://=<API URL>:6443 --certificate-authority=ca.pem --embed-certs
# kubectl config set-credentials rpi-<username> --token=<token>
# kubectl config set-context rpi --cluster=rpi --user=rpi-<username> --namespace=<username>
# kubectl config use-context rpi
