old/manifests/kuard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  labels:
    app: kuard
  annotations:
    configmap.reloader.stakater.com/reload: kuard-config
    secret.reloader.stakater.com/reload: kuard-tls
spec:
  selector:
    matchLabels:
      app: kuard
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      annotations:
        SECRET_FOO: /apps/test/kuard/misc/FOO
      labels:
        app: kuard
        blinktShow: "true"
        blinktColor: "00ffff"
    spec:
      tolerations: # See https://github.com/kubernetes/kubernetes/issues/74651
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 5
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 5
      restartPolicy: Always
      containers:
        - name: kuard
          image: gcr.io/kuar-demo/kuard-arm:purple
          imagePullPolicy: Always
          args:
            - if [ -r /env/secrets ]; then source /env/secrets && rm -f /env/secrets; fi; /kuard $(EXTRA_PARAM)
          command:
            - /bin/sh
            - -c
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - mountPath: /data
              name: kuard-data
            - name: config-volume
              mountPath: /config
            - name: tls-certs
              mountPath: /tls
              readOnly: true
            - name: env
              mountPath: /env
      volumes:
        - name: env
          emptyDir: {}
        - name: podinfo
          downwardAPI:
            defaultMode: 420
            items:
              - fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.annotations
                path: annotations
        - name: kuard-data
          persistentVolumeClaim:
            claimName: kuard-claim
        - name: config-volume
          configMap:
            name: kuard-config
        - name: tls-certs
          secret:
            secretName: kuard-tls
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
  labels:
    app: kuard
  annotations:
    prometheus.io/probe: "true"
spec:
  type: ClusterIP # LoadBalancer or NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: kuard
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  rules:
    - host: kuard.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: kuard
              servicePort: 8080
